--- a/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Extension\Internal\ExcludesExtension.cs" />
     <Compile Include="Extension\SimpleResolverExntesion.cs" />
+    <Compile Include="Query\ParameterContainer.cs" />
     <Compile Include="Query\Parameter\AnyParameter.cs" />
     <Compile Include="Query\Parameter\FacetFieldParameter.cs" />
     <Compile Include="Query\Parameter\FacetLimitParameter.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="Query\Parameter\SpatialFilterParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider.cs" />
+    <Compile Include="Query\Parameter\SystemParameter.cs" />
     <Compile Include="Query\Result\DocumentResult.cs" />
     <Compile Include="Query\Result\FacetFieldResult.cs" />
     <Compile Include="Query\Result\FacetQueryResult.cs" />
