--- a/SolrExpress.Solr4/SolrExpress.Solr4.csproj
+++ b/SolrExpress.Solr4/SolrExpress.Solr4.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Extension\SimpleResolverExntesion.cs" />
     <Compile Include="Query\ParameterContainer.cs" />
     <Compile Include="Query\Parameter\AnyParameter.cs" />
+    <Compile Include="Query\Parameter\BoostParameter.cs" />
     <Compile Include="Query\Parameter\FacetFieldParameter.cs">
       <SubType>Code</SubType>
     </Compile>
