--- a/SolrExpress.Core/project.json
+++ b/SolrExpress.Core/project.json
@@ -1,11 +1,17 @@
 ﻿{
-  "version": "1.0.0-*",
-  "description": "SolrExpress.Core Class Library",
+  "version": "3.0.0.0",
+  "description": "A simple and lightweight query .NET library for Solr, in a controlled, buildable and fail fast way - Core library",
+  "requireLicenseAcceptance": false,
   "authors": [ "diego.lb" ],
-  "tags": [ "" ],
-  "projectUrl": "",
-  "licenseUrl": "",
+  "tags": [ "SOLR", "C#", ".Net" ],
+  "projectUrl": "https://github.com/solr-express/solr-express",
+  "licenseUrl": "https://github.com/solr-express/solr-express",
 
+  "buildOptions": {
+    "warningsAsErrors": true,
+    "keyFile": "SolrExpress.Core.snk"
+  },
+  
   "frameworks": {
     "net451": { },
     "netstandard1.5": {
