--- a/SolrExpress.Core/project.json
+++ b/SolrExpress.Core/project.json
@@ -1,16 +1,30 @@
 ﻿{
   "version": "3.0.0.0",
   "description": "A simple and lightweight query .NET library for Solr, in a controlled, buildable and fail fast way - Core library",
-  "requireLicenseAcceptance": false,
   "authors": [ "diego.lb" ],
-  "tags": [ "SOLR", "C#", ".Net" ],
-  "projectUrl": "https://github.com/solr-express/solr-express",
-  "licenseUrl": "https://github.com/solr-express/solr-express",
+  "packOptions": {
+    "licenseUrl": "https://github.com/solr-express/solr-express",
+    "repository": {
+      "url": "https://github.com/solr-express/solr-express",
+      "type": "git"
+    },
+    "tags": [ "SOLR", "C#", ".Net" ],
+    "requireLicenseAcceptance": false
+  },
   "buildOptions": {
     "warningsAsErrors": true,
-    "keyFile": "SolrExpress.Core.snk"
+    "keyFile": "../Key.snk"
   },
   "frameworks": {
+    "netstandard1.5": {
+      "dependencies": {
+        "Newtonsoft.Json": "8.0.4-beta1",
+        "System.Console": "4.0.0-rc2-24027",
+        "System.Diagnostics.Tools": "4.0.1-rc2-24027",
+        "System.IO": "4.1.0-rc2-24027",
+        "System.IO.FileSystem": "4.0.1-rc2-24027"
+      }
+    },
     "net451": {
       "dependencies": {
         "Newtonsoft.Json": "8.0.3"
