--- a/SolrExpress.Solr5/project.json
+++ b/SolrExpress.Solr5/project.json
@@ -1,19 +1,38 @@
 ﻿{
   "version": "3.0.0.0",
   "description": "A simple and lightweight query .NET library for Solr, in a controlled, buildable and fail fast way for Sor 5.x",
-  "requireLicenseAcceptance": false,
   "authors": [ "diego.lb" ],
-  "tags": [ "SOLR", "C#", ".Net" ],
-  "projectUrl": "https://github.com/solr-express/solr-express",
-  "licenseUrl": "https://github.com/solr-express/solr-express",
+  "packOptions": {
+    "licenseUrl": "https://github.com/solr-express/solr-express",
+    "repository": {
+      "url": "https://github.com/solr-express/solr-express",
+      "type": "git"
+    },
+    "tags": [ "SOLR", "C#", ".Net" ],
+    "requireLicenseAcceptance": false
+  },
   "buildOptions": {
     "warningsAsErrors": true,
-    "keyFile": "SolrExpress.Solr5.snk"
-  },
-  "frameworks": {
-    "net451": { }
+    "keyFile": "../Key.snk"
   },
   "dependencies": {
     "SolrExpress.Core": "3.0.0.0"
+  },
+  "frameworks": {
+    "netstandard1.5": {
+      "dependencies": {
+        "System.Net.Requests": "4.0.11-rc2-24027",
+        "Newtonsoft.Json": "8.0.4-beta1",
+        "System.Console": "4.0.0-rc2-24027",
+        "System.Diagnostics.Tools": "4.0.1-rc2-24027",
+        "System.IO": "4.1.0-rc2-24027",
+        "System.IO.FileSystem": "4.0.1-rc2-24027"
+      }
+    },
+    "net451": {
+      "dependencies": {
+        "Newtonsoft.Json": "8.0.3"
+      }
+    }
   }
 }
