--- a/SolrExpress.Solr5.UnitTests/project.json
+++ b/SolrExpress.Solr5.UnitTests/project.json
@@ -1,19 +1,49 @@
 ﻿{
-  "version": "1.0.0-*",
-  "description": "SolrExpress.Solr5.UnitTests Class Library",
   "authors": [ "diego.lb" ],
-  "tags": [ "" ],
-  "projectUrl": "",
-  "licenseUrl": "",
-
-  "testRunner": "xunit",
-
+  "buildOptions": {
+    "warningsAsErrors": true,
+    "keyFile": "../Key.snk"
+  },
+  "dependencies": {
+    "SolrExpress.Core": "3.0.0.0",
+    "SolrExpress.Solr5": "3.0.0.0"
+  },
+  "description": "SolrExpress.Solr5.UnitTests Class Library",
   "frameworks": {
-    "net451": { },
-    "netstandard1.5": {
+    "netcoreapp1.0": {
       "imports": [
-        "portable-net452+win81"
-      ]
+        "dnxcore50",
+        "portable-net45+win8"
+      ],
+      "dependencies": {
+        "dotnet-test-xunit": "1.0.0-rc2-build10025",
+        "Microsoft.NETCore.App": {
+          "version": "1.0.0-rc2-3002702",
+          "type": "platform"
+        },
+        "moq.netcore": "4.4.0-beta8",
+        "System.Diagnostics.TraceSource": "4.0.0-rc2-24027",
+        "xunit": "2.1.0-rc2-build3176"
+      }
+    },
+    "net451": {
+      "dependencies": {
+        "Moq": "4.5.3",
+        "System.Runtime": "4.1.0-rc2-24027",
+        "System.Threading.Tasks": "4.0.11-rc2-24027",
+        "xunit": "2.2.0-beta1-build3239"
+      }
     }
-  }
+  },
+  "packOptions": {
+    "licenseUrl": "https://github.com/solr-express/solr-express",
+    "repository": {
+      "url": "https://github.com/solr-express/solr-express",
+      "type": "git"
+    },
+    "requireLicenseAcceptance": false,
+    "tags": [ "SOLR", "C#", ".Net" ]
+  },
+  "testRunner": "xunit",
+  "version": "3.0.0.0"
 }
