--- a/sample/Sample.SimpleUse/project.lock.json
+++ b/sample/Sample.SimpleUse/project.lock.json
@@ -1957,7 +1957,7 @@
           "lib/netstandard1.3/_._": {}
         }
       },
-      "SolrExpress.Core/3.0.0": {
+      "SolrExpress.Core/3.0.0-beta": {
         "type": "project",
         "framework": ".NETCoreApp,Version=v1.0",
         "dependencies": {
@@ -1974,11 +1974,11 @@
           "netcoreapp1.0/SolrExpress.Core.dll": {}
         }
       },
-      "SolrExpress.Solr5/3.0.0": {
+      "SolrExpress.Solr5/3.0.0-beta": {
         "type": "project",
         "framework": ".NETCoreApp,Version=v1.0",
         "dependencies": {
-          "SolrExpress.Core": "3.0.0",
+          "SolrExpress.Core": "3.0.0-beta",
           "System.Net.Requests": "4.0.11-rc2-24027"
         },
         "compile": {
@@ -1999,7 +1999,7 @@
           "lib/net45/Newtonsoft.Json.dll": {}
         }
       },
-      "SolrExpress.Core/3.0.0": {
+      "SolrExpress.Core/3.0.0-beta": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.5.1",
         "dependencies": {
@@ -2012,11 +2012,11 @@
           "net451/SolrExpress.Core.dll": {}
         }
       },
-      "SolrExpress.Solr5/3.0.0": {
+      "SolrExpress.Solr5/3.0.0-beta": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.5.1",
         "dependencies": {
-          "SolrExpress.Core": "3.0.0"
+          "SolrExpress.Core": "3.0.0-beta"
         },
         "compile": {
           "net451/SolrExpress.Solr5.dll": {}
@@ -6613,12 +6613,12 @@
         "ref/xamarinwatchos10/_._"
       ]
     },
-    "SolrExpress.Core/3.0.0": {
+    "SolrExpress.Core/3.0.0-beta": {
       "type": "project",
       "path": "../../src/SolrExpress.Core/project.json",
       "msbuildProject": "../../src/SolrExpress.Core/SolrExpress.Core.xproj"
     },
-    "SolrExpress.Solr5/3.0.0": {
+    "SolrExpress.Solr5/3.0.0-beta": {
       "type": "project",
       "path": "../../src/SolrExpress.Solr5/project.json",
       "msbuildProject": "../../src/SolrExpress.Solr5/SolrExpress.Solr5.xproj"
@@ -6626,7 +6626,7 @@
   },
   "projectFileDependencyGroups": {
     "": [
-      "SolrExpress.Solr5 >= 3.0.0"
+      "SolrExpress.Solr5 >= 3.0.0-beta"
     ],
     ".NETCoreApp,Version=v1.0": [
       "Microsoft.NETCore.App >= 1.0.0-rc2-3002702"
