--- a/sample/Sample.Ui/project.json
+++ b/sample/Sample.Ui/project.json
@@ -39,8 +39,8 @@
       "version": "1.0.0-preview1-final",
       "type": "build"
     },
-    "SolrExpress.Core": "3.0.0.0",
-    "SolrExpress.Solr5": "3.0.0.0"
+    "SolrExpress.Core": "3.0.0-beta",
+    "SolrExpress.Solr5": "3.0.0-beta"
   },
 
   "tools": {
