--- a/sample/Sample.SimpleUse/project.json
+++ b/sample/Sample.SimpleUse/project.json
@@ -5,7 +5,7 @@
   },
 
   "dependencies": {
-    "SolrExpress.Solr5": "3.0.0-beta"
+    "SolrExpress.Solr5": "3.0.0-beta2"
   },
 
   "frameworks": {
@@ -14,7 +14,7 @@
       "dependencies": {
         "Microsoft.NETCore.App": {
           "type": "platform",
-          "version": "1.0.0-rc2-3002702"
+          "version": "1.0.0"
         }
       }
     },
