--- a/src/SolrExpress.Core/project.json
+++ b/src/SolrExpress.Core/project.json
@@ -8,16 +8,16 @@
   "frameworks": {
     "netcoreapp1.0": {
       "dependencies": {
-        "Newtonsoft.Json": "8.0.4-beta1",
-        "System.Console": "4.0.0-rc2-24027",
-        "System.Diagnostics.Tools": "4.0.1-rc2-24027",
-        "System.IO": "4.1.0-rc2-24027",
-        "System.IO.FileSystem": "4.0.1-rc2-24027"
+        "Newtonsoft.Json": "9.0.1",
+        "System.Console": "4.0.0",
+        "System.Diagnostics.Tools": "4.0.1",
+        "System.IO": "4.1.0",
+        "System.IO.FileSystem": "4.0.1"
       }
     },
     "net451": {
       "dependencies": {
-        "Newtonsoft.Json": "8.0.3"
+        "Newtonsoft.Json": "9.0.1"
       }
     }
   },
@@ -30,5 +30,5 @@
     "tags": [ "SOLR", "C#", ".Net" ],
     "requireLicenseAcceptance": false
   },
-  "version": "3.0.0-beta"
+  "version": "3.0.0-beta2"
 }
