--- a/src/SolrExpress.Solr4/project.json
+++ b/src/SolrExpress.Solr4/project.json
@@ -5,13 +5,13 @@
     "keyFile": "../../Key.snk"
   },
   "dependencies": {
-    "SolrExpress.Core": "3.0.0-beta"
+    "SolrExpress.Core": "3.0.0-beta2"
   },
   "description": "A simple and lightweight query .NET library for Solr, in a controlled, buildable and fail fast way for Sor 4.x",
   "frameworks": {
     "netcoreapp1.0": {
       "dependencies": {
-        "System.Net.Requests": "4.0.11-rc2-24027"
+        "System.Net.Requests": "4.0.11"
       }
     },
     "net451": {
@@ -28,5 +28,5 @@
     "tags": [ "SOLR", "C#", ".Net" ],
     "requireLicenseAcceptance": false
   },
-  "version": "3.0.0-beta"
+  "version": "3.0.0-beta2"
 }
