--- a/sample/Sample.Ui/project.lock.json
+++ b/sample/Sample.Ui/project.lock.json
@@ -4386,7 +4386,7 @@
           "lib/netstandard1.3/System.Xml.XPath.XDocument.dll": {}
         }
       },
-      "SolrExpress.Core/3.0.0-beta2": {
+      "SolrExpress.Core/3.0.0": {
         "type": "project",
         "framework": ".NETCoreApp,Version=v1.0",
         "dependencies": {
@@ -4403,11 +4403,11 @@
           "netcoreapp1.0/SolrExpress.Core.dll": {}
         }
       },
-      "SolrExpress.Solr5/3.0.0-beta2": {
+      "SolrExpress.Solr5/3.0.0": {
         "type": "project",
         "framework": ".NETCoreApp,Version=v1.0",
         "dependencies": {
-          "SolrExpress.Core": "3.0.0-beta2",
+          "SolrExpress.Core": "3.0.0",
           "System.Net.Requests": "4.0.11"
         },
         "compile": {
@@ -11080,12 +11080,12 @@
         "ref/xamarinwatchos10/_._"
       ]
     },
-    "SolrExpress.Core/3.0.0-beta2": {
+    "SolrExpress.Core/3.0.0": {
       "type": "project",
       "path": "../../src/SolrExpress.Core/project.json",
       "msbuildProject": "../../src/SolrExpress.Core/SolrExpress.Core.xproj"
     },
-    "SolrExpress.Solr5/3.0.0-beta2": {
+    "SolrExpress.Solr5/3.0.0": {
       "type": "project",
       "path": "../../src/SolrExpress.Solr5/project.json",
       "msbuildProject": "../../src/SolrExpress.Solr5/SolrExpress.Solr5.xproj"
@@ -11115,7 +11115,7 @@
       "Microsoft.VisualStudio.Web.BrowserLink.Loader >= 14.0.0",
       "Microsoft.VisualStudio.Web.CodeGeneration.Tools >= 1.0.0-preview2-final",
       "Microsoft.VisualStudio.Web.CodeGenerators.Mvc >= 1.0.0-preview2-final",
-      "SolrExpress.Core >= 3.0.0-beta2",
+      "SolrExpress.Core >= 3.0.0",
       "SolrExpress.Solr5 >= 3.0.0-beta2"
     ],
     ".NETCoreApp,Version=v1.0": []
