--- a/sample/Sample.SimpleUse/project.lock.json
+++ b/sample/Sample.SimpleUse/project.lock.json
@@ -2070,7 +2070,7 @@
           "lib/netstandard1.3/_._": {}
         }
       },
-      "SolrExpress.Core/3.0.0-beta2": {
+      "SolrExpress.Core/3.0.0": {
         "type": "project",
         "framework": ".NETCoreApp,Version=v1.0",
         "dependencies": {
@@ -2087,11 +2087,11 @@
           "netcoreapp1.0/SolrExpress.Core.dll": {}
         }
       },
-      "SolrExpress.Solr5/3.0.0-beta2": {
+      "SolrExpress.Solr5/3.0.0": {
         "type": "project",
         "framework": ".NETCoreApp,Version=v1.0",
         "dependencies": {
-          "SolrExpress.Core": "3.0.0-beta2",
+          "SolrExpress.Core": "3.0.0",
           "System.Net.Requests": "4.0.11"
         },
         "compile": {
@@ -2112,7 +2112,7 @@
           "lib/net45/Newtonsoft.Json.dll": {}
         }
       },
-      "SolrExpress.Core/3.0.0-beta2": {
+      "SolrExpress.Core/3.0.0": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.5.1",
         "dependencies": {
@@ -2125,11 +2125,11 @@
           "net451/SolrExpress.Core.dll": {}
         }
       },
-      "SolrExpress.Solr5/3.0.0-beta2": {
+      "SolrExpress.Solr5/3.0.0": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.5.1",
         "dependencies": {
-          "SolrExpress.Core": "3.0.0-beta2"
+          "SolrExpress.Core": "3.0.0"
         },
         "compile": {
           "net451/SolrExpress.Solr5.dll": {}
@@ -6826,12 +6826,12 @@
         "ref/xamarinwatchos10/_._"
       ]
     },
-    "SolrExpress.Core/3.0.0-beta2": {
+    "SolrExpress.Core/3.0.0": {
       "type": "project",
       "path": "../../src/SolrExpress.Core/project.json",
       "msbuildProject": "../../src/SolrExpress.Core/SolrExpress.Core.xproj"
     },
-    "SolrExpress.Solr5/3.0.0-beta2": {
+    "SolrExpress.Solr5/3.0.0": {
       "type": "project",
       "path": "../../src/SolrExpress.Solr5/project.json",
       "msbuildProject": "../../src/SolrExpress.Solr5/SolrExpress.Solr5.xproj"
