--- a/sample/Sample.Ui/project.json
+++ b/sample/Sample.Ui/project.json
@@ -39,7 +39,7 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
-    "SolrExpress.Core": "3.0.0-beta2",
+    "SolrExpress.Core": "3.0.0",
     "SolrExpress.Solr5": "3.0.0-beta2"
   },
 
