--- a/src/SolrExpress.Core/project.json
+++ b/src/SolrExpress.Core/project.json
@@ -22,7 +22,7 @@
     }
   },
   "packOptions": {
-    "licenseUrl": "https://github.com/solr-express/solr-express",
+    "licenseUrl": "https://github.com/solr-express/solr-express/blob/master/LICENSE",
     "repository": {
       "url": "https://github.com/solr-express/solr-express",
       "type": "git"
@@ -30,5 +30,5 @@
     "tags": [ "SOLR", "C#", ".Net" ],
     "requireLicenseAcceptance": false
   },
-  "version": "3.0.0-beta2"
+  "version": "3.0.0"
 }
