--- a/src/SolrExpress.Solr5/project.lock.json
+++ b/src/SolrExpress.Solr5/project.lock.json
@@ -1010,7 +1010,7 @@
           "lib/netstandard1.3/System.Xml.XDocument.dll": {}
         }
       },
-      "SolrExpress.Core/3.0.0-beta2": {
+      "SolrExpress.Core/3.0.0": {
         "type": "project",
         "framework": ".NETCoreApp,Version=v1.0",
         "dependencies": {
@@ -1038,7 +1038,7 @@
           "lib/net45/Newtonsoft.Json.dll": {}
         }
       },
-      "SolrExpress.Core/3.0.0-beta2": {
+      "SolrExpress.Core/3.0.0": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.5.1",
         "dependencies": {
@@ -3984,7 +3984,7 @@
         "ref/xamarinwatchos10/_._"
       ]
     },
-    "SolrExpress.Core/3.0.0-beta2": {
+    "SolrExpress.Core/3.0.0": {
       "type": "project",
       "path": "../SolrExpress.Core/project.json",
       "msbuildProject": "../SolrExpress.Core/SolrExpress.Core.xproj"
@@ -3992,7 +3992,7 @@
   },
   "projectFileDependencyGroups": {
     "": [
-      "SolrExpress.Core >= 3.0.0-beta2"
+      "SolrExpress.Core >= 3.0.0"
     ],
     ".NETCoreApp,Version=v1.0": [
       "System.Net.Requests >= 4.0.11"
