--- a/sample/Sample.SimpleUse/project.json
+++ b/sample/Sample.SimpleUse/project.json
@@ -5,7 +5,7 @@
   },
 
   "dependencies": {
-    "SolrExpress.Solr5": "3.0.0-beta2"
+    "SolrExpress.Solr5": "3.0.0"
   },
 
   "frameworks": {
@@ -18,7 +18,12 @@
         }
       }
     },
-    "net451": {
+    "net4": {
+      "dependencies": {
+        "Newtonsoft.Json": "9.0.1"
+      }
+    },
+    "net45": {
       "dependencies": {
       }
     }
