--- a/sample/Sample.Ui/project.json
+++ b/sample/Sample.Ui/project.json
@@ -40,7 +40,7 @@
       "type": "build"
     },
     "SolrExpress.Core": "3.0.0",
-    "SolrExpress.Solr5": "3.0.0-beta2"
+    "SolrExpress.Solr5": "3.0.0"
   },
 
   "tools": {
