--- a/sample/Sample.SimpleUse/project.json
+++ b/sample/Sample.SimpleUse/project.json
@@ -1,11 +1,11 @@
 ﻿{
-  "version": "1.0.0-*",
+  "version": "3.1.0",
   "buildOptions": {
     "emitEntryPoint": true
   },
 
   "dependencies": {
-    "SolrExpress.Solr5": "3.0.0"
+    "SolrExpress.Solr5": "3.1.0"
   },
 
   "frameworks": {
