--- a/sample/Sample.SimpleUse/project.json
+++ b/sample/Sample.SimpleUse/project.json
@@ -5,7 +5,9 @@
   },
 
   "dependencies": {
-    "SolrExpress.Solr5": "3.1.1"
+    "SolrExpress.Solr5": {
+      "target": "project"
+    }
   },
 
   "frameworks": {
