--- a/benchmarks/SolrExpress.Benchmarks/NuGet.config
+++ b/benchmarks/SolrExpress.Benchmarks/NuGet.config
@@ -2,5 +2,6 @@
 <configuration>
   <packageSources>
     <add key="aspnet-contrib" value="https://www.myget.org/F/aspnet-contrib/api/v3/index.json" />
+    <add key="appveyor-bdn" value="https://ci.appveyor.com/nuget/benchmarkdotnet" />
   </packageSources>
 </configuration>
