--- a/benchmarks/SolrExpress.Core.Benchmarks/project.json
+++ b/benchmarks/SolrExpress.Core.Benchmarks/project.json
@@ -20,7 +20,6 @@
   },
   "dependencies": {
     "BenchmarkDotNet": "0.9.8",
-    "Moq": "4.6.36-alpha",
     "SolrExpress.Benchmarks.Helper": {
       "target": "project"
     },
@@ -33,8 +32,10 @@
       "buildOptions": {
         "define": [ "CLASSIC" ]
       },
-      "frameworkAssemblies": {
-        "System.Reflection": "4.0.0.0"
+      "dependencies": {
+        "Moq": "4.5.19",
+        "System.Runtime": "4.0.0",
+        "System.Threading.Tasks": "4.0.0"
       }
     },
     "netcoreapp1.0": {
@@ -45,7 +46,8 @@
         "Microsoft.NETCore.App": {
           "version": "1.0.0",
           "type": "platform"
-        }
+        },
+        "Moq": "4.6.36-alpha"
       }
     }
   }
