--- a/benchmarks/SolrExpress.Solr5.Benchmarks/project.json
+++ b/benchmarks/SolrExpress.Solr5.Benchmarks/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "buildOptions": {
     "allowUnsafe": true,
+    "embed": [ "Query/Result/*.json" ],
     "keyFile": "../../Key.snk",
     "strongName": true,
     "warningsAsErrors": true
@@ -20,7 +21,6 @@
   },
   "dependencies": {
     "BenchmarkDotNet": "0.9.8",
-    "Moq": "4.6.36-alpha",
     "SolrExpress.Benchmarks.Helper": {
       "target": "project"
     },
@@ -33,8 +33,10 @@
       "buildOptions": {
         "define": [ "CLASSIC" ]
       },
-      "frameworkAssemblies": {
-        "System.Reflection": "4.0.0.0"
+      "dependencies": {
+        "Moq": "4.5.19",
+        "System.Runtime": "4.0.0",
+        "System.Threading.Tasks": "4.0.0"
       }
     },
     "netcoreapp1.0": {
@@ -45,7 +47,8 @@
         "Microsoft.NETCore.App": {
           "version": "1.0.0",
           "type": "platform"
-        }
+        },
+        "Moq": "4.6.36-alpha"
       }
     }
   }
