--- a/src/SolrExpress.Solr4/project.json
+++ b/src/SolrExpress.Solr4/project.json
@@ -26,6 +26,8 @@
   "frameworks": {
     "netcoreapp1.0": {
       "dependencies": {
+        "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
+        "Microsoft.Extensions.Options": "1.0.0",
         "System.Net.Requests": "4.0.11"
       }
     },
@@ -35,6 +37,8 @@
       }
     },
     "net45": {
+      "dependencies": {
+      }
     }
   },
   "packOptions": {
