--- a/src/SolrExpress.Solr5/project.json
+++ b/src/SolrExpress.Solr5/project.json
@@ -26,6 +26,7 @@
   "frameworks": {
     "netcoreapp1.0": {
       "dependencies": {
+        "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
         "System.Net.Requests": "4.0.11"
       }
     },
