Publish files to sample site

--- a/sample/Sample.Ui/project.json
+++ b/sample/Sample.Ui/project.json
@@ -1,6 +1,11 @@
 {
-  "userSecretsId": "aspnet-Sample.Ui-92918cce-71e8-415d-9d22-6b39d68a4ae5",
-
+  "buildOptions": {
+    "emitEntryPoint": true,
+    "preserveCompilationContext": true,
+    "copyToOutput": {
+      "include": "appsettings.json"
+    }
+  },
   "dependencies": {
     "Microsoft.NETCore.App": {
       "version": "1.0.0",
@@ -46,7 +51,30 @@
       "target": "project"
     }
   },
-
+  "frameworks": {
+    "netcoreapp1.0": {
+      "imports": [
+        "dotnet5.6"
+      ]
+    }
+  },
+  "publishOptions": {
+    "include": [
+      "wwwroot",
+      "Views",
+      "appsettings.json",
+      "web.config"
+    ]
+  },
+  "runtimeOptions": {
+    "configProperties": {
+      "System.GC.Server": true
+    }
+  },
+  "scripts": {
+    "prepublish": [ "npm install", "bower install", "gulp clean", "gulp min" ],
+    "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
+  },
   "tools": {
     "Microsoft.AspNetCore.Razor.Tools": {
       "version": "1.0.0-preview2-final",
@@ -75,37 +103,5 @@
       ]
     }
   },
-
-  "frameworks": {
-    "netcoreapp1.0": {
-      "imports": [
-        "dotnet5.6",
-        "dnxcore50",
-        "portable-net45+win8"
-      ]
-    }
-  },
-
-  "buildOptions": {
-    "emitEntryPoint": true,
-    "preserveCompilationContext": true
-  },
-
-  "runtimeOptions": {
-    "gcServer": true
-  },
-
-  "publishOptions": {
-    "include": [
-      "wwwroot",
-      "Views",
-      "appsettings.json",
-      "web.config"
-    ]
-  },
-
-  "scripts": {
-    "prepublish": [ "npm install", "bower install", "gulp clean", "gulp min" ],
-    "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
-  }
+  "userSecretsId": "aspnet-Sample.Ui-92918cce-71e8-415d-9d22-6b39d68a4ae5"
 }
