--- a/src/SolrExpress.Core/project.json
+++ b/src/SolrExpress.Core/project.json
@@ -27,7 +27,8 @@
         "System.Console": "4.0.0",
         "System.Diagnostics.Tools": "4.0.1",
         "System.IO": "4.1.0",
-        "System.IO.FileSystem": "4.0.1"
+        "System.IO.FileSystem": "4.0.1",
+        "System.Threading.Tasks.Parallel": "4.3.0"
       }
     },
     "net4": {
@@ -39,7 +40,8 @@
     "net45": {
       "dependencies": {
         "Newtonsoft.Json": "9.0.1",
-        "SimpleInjector": "3.2.0"
+        "SimpleInjector": "3.2.0",
+        "System.Threading.Tasks.Parallel": "4.3.0"
       }
     }
   },
