--- a/src/SolrExpress.Solr4/project.json
+++ b/src/SolrExpress.Solr4/project.json
@@ -28,7 +28,8 @@
       "dependencies": {
         "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
         "Microsoft.Extensions.Options": "1.0.0",
-        "System.Net.Requests": "4.0.11"
+        "System.Net.Requests": "4.0.11",
+        "System.Threading.Tasks.Parallel": "4.3.0"
       }
     },
     "net4": {
@@ -38,6 +39,7 @@
     },
     "net45": {
       "dependencies": {
+        "System.Threading.Tasks.Parallel": "4.3.0"
       }
     }
   },
