--- a/src/SolrExpress.Solr4/project.json
+++ b/src/SolrExpress.Solr4/project.json
@@ -24,23 +24,18 @@
   },
   "description": "A simple and lightweight query .NET library for Solr, in a controlled, buildable and fail fast way for Sor 4.x",
   "frameworks": {
-    "netcoreapp1.0": {
+    "netstandard1.6": {
       "dependencies": {
-        "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0",
-        "Microsoft.Extensions.Options": "1.0.0",
-        "System.Net.Requests": "4.0.11",
-        "System.Threading.Tasks.Parallel": "4.3.0"
+        "NETStandard.Library": "1.6.0",
+        "System.Net.Requests": "4.3.0"
+      },
+      "buildOptions": {
+        "define": [ "NETCORE" ]
       }
     },
     "net4": {
-      "dependencies": {
-        "Newtonsoft.Json": "9.0.1"
-      }
     },
     "net45": {
-      "dependencies": {
-        "System.Threading.Tasks.Parallel": "4.3.0"
-      }
     }
   },
   "packOptions": {
