--- a/sample/Sample.Ui/project.json
+++ b/sample/Sample.Ui/project.json
@@ -2,13 +2,14 @@
   "buildOptions": {
     "emitEntryPoint": true,
     "preserveCompilationContext": true,
+    "define": [ "NETCORE" ],
     "copyToOutput": {
       "include": "appsettings.json"
     }
   },
   "dependencies": {
     "Microsoft.NETCore.App": {
-      "version": "1.0.0",
+      "version": "1.0.1",
       "type": "platform"
     },
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
