--- a/src/SolrExpress.Solr5/project.json
+++ b/src/SolrExpress.Solr5/project.json
@@ -37,6 +37,9 @@
     "net4": {
     },
     "net45": {
+      "dependencies": {
+        "Flurl.Http.Signed": "1.1.1"
+      }
     }
   },
   "packOptions": {
@@ -48,5 +51,5 @@
     "tags": [ "SOLR", "C#", ".Net Framework", ".Net Core" ],
     "requireLicenseAcceptance": false
   },
-  "version": "4.2.2"
+  "version": "4.2.3"
 }
