--- a/src/SolrExpress.Solr4/project.json
+++ b/src/SolrExpress.Solr4/project.json
@@ -27,7 +27,8 @@
     "netstandard1.6": {
       "dependencies": {
         "NETStandard.Library": "1.6.0",
-        "System.Net.Requests": "4.3.0"
+        "System.Net.Requests": "4.3.0",
+        "System.Threading.Tasks.Parallel": "4.3.0"
       },
       "buildOptions": {
         "define": [ "NETCORE" ]
