--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,11 @@
 * text=auto
 
 ###############################################################################
+# Set default behavior to automatically change tab to spaces.
+###############################################################################
+*.cs filter=spabs
+
+###############################################################################
 # Set default behavior for command prompt diff.
 #
 # This is need for earlier builds of msysgit that does not have it on by
